--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
     <h1>SileQ Recipes</h1>
-    <a href="./recipes/cabbage-roll.html" alt="Cabbage Roll Caserolle">Cabbage Roll</a>
+    <ul>
+        <h3>
+                <li><a href="./recipes/cabbageroll.html" alt="Cabbage Roll recipe link">Cabbage Roll Recipe</a></li>
+                <li><a href="./recipes/eggplantparmesan.html" alt="Eggplant Parmesan recipe link">Eggplant Parmesan Recipe</a></li>
+                <li><a href="./recipes/lasagnaflatbread.html" alt="Lasagna Flatbread recipe link">Lasagna Flatbread Recipe</a></li>
+        </h3>        
+    </ul>
 </body>
 </html>
