img/chefindex.jpg

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>SileQ Recipes</h1>
+    <img src="img/chefindex.jpg" width="500"></a>
     <ul>
         <h3>
                 <li><a href="./recipes/cabbageroll.html" alt="Cabbage Roll recipe link">Cabbage Roll Recipe</a></li>
