--- a/recipes/eggplantparmesan.html
+++ b/recipes/eggplantparmesan.html
@@ -5,7 +5,7 @@
     <title>Eggplant Parmesan Recipe</title>
 </head>
 <body>
-    <h1>Eggplant Parmesan Recipe</h1>
+    <h1 id='header'>Eggplant Parmesan Recipe</h1>
     <img src="../img/eggplantparmesan1.jpg"" alt="Eggplant Parmesan Picture" width=500 ><br>
     <h2>Description</h2>
      <p>This easy eggplant Parmesan recipe has layers of crispy, breaded eggplant slices<br> 
@@ -37,5 +37,6 @@
         <li><strong>Step 5</strong></li></li>
             <p>Bake in the preheated oven until golden brown, about 35 minutes.</p>
     </ol>
+    <a href="#header">Return to top</a>
 </body>
 </html>
