--- a/recipes/lasagnaflatbread.html
+++ b/recipes/lasagnaflatbread.html
@@ -5,7 +5,7 @@
     <title>Lasagna Flatbread Recipe</title>
 </head>
 <body>
-    <h1>Lasagna Flatbread Recipe</h1>
+    <h1 id='header'>Lasagna Flatbread Recipe</h1>
     <img src="../img/lasagna1.jpeg"" alt="Lasagna Flatbread Picture" width=500><br>
     <h2>Description</h2>
     <p>Lasagna Flatbread is a cheesy and crispy Continental appetizer which is loaded<br>
@@ -35,5 +35,6 @@
         <li><strong>Step 4</strong></li>
             <p>Bake in the preheated oven until cheese is melted and bubbly, 10 to 15 minutes.</p>    
     </ol>
+    <a href="#header">Return to top</a>
 </body>
 </html>
